added html, css styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div class="page-wrap">
+<!--  Container-->
   <div class="container">
     <div class="weather-wrap">
       <div class="weather-title">
@@ -23,10 +24,13 @@
             Bibendum cursus quis.
           </span>
       </div>
+<!--      Search city Block-->
       <div class="input-field">
         <input type="text" placeholder="Please enter city name" class="input">
         <button class="btn">Add</button>
       </div>
+      <!--   The end of Search city Block-->
+<!--      Weather Data Show Block-->
       <div class="weather-blocks">
         <div class="details">
           <div class="sunset-sunrise">
@@ -100,7 +104,9 @@
         </div>
       </div>
     </div>
+    <!--     The end of  Weather Data Show Block-->
   </div>
+  <!--  The end of Container-->
 </div>
 <script src="./main.js"></script>
 </body>
